--- a/templates/ideas/base.html
+++ b/templates/ideas/base.html
@@ -14,7 +14,7 @@
   <script defer src="{% static 'ideas/app.js' %}"></script>
  <link rel="stylesheet" href="{% static 'ideas/style.css' %}">
 </head>
-<body class="bg-light">
+<body class="bg-dark">
   <div class="image-overlay">
   <nav class="navbar navbar-expand-md navbar-dark bg-dark py-2">
     <div class="container">
