--- a/templates/ideas/index.html
+++ b/templates/ideas/index.html
@@ -115,13 +115,13 @@
       </div>
 
       <div class="col-md-3">
-        <div class="card text-center bg-dark text-white mb-3">
+        <div class="card text-center bg-light text-dark mb-3">
           <div class="card-body">
             <h3>Share Your Ideas!</h3>
             <h4 class="display-4">
               <i class="fas fa-bullhorn"></i>
             </h4>
-            <a href="{% url 'ideas:post'%}" class="btn btn-outline-light btn-sm">Post An Idea!</a>
+            <a href="{% url 'ideas:post'%}" class="btn btn-dark btn-sm">Post An Idea!</a>
           </div>
         </div>
 
