--- a/static/ideas/style.css
+++ b/static/ideas/style.css
@@ -1,11 +1,23 @@
-/* body {
+html {
+  height: 100%;
+}
+body {
   background-image: url('https://www.integrify.com/site/assets/files/2452/idea-management.jpg');
-  background-color: red;
+min-height: 100vh;
 }
 .image-overlay {
-  background-color: rgb(0, 5, 5, 0.6);
-  height: 100vh;
-} */
+  background-color: rgba(5, 5, 0, 0.8);
+  min-height: 100vh;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
+.footer {
+  position: sticky;
+  top: 100%;
+}
 
 .brand {
   width: 50px;
